--- a/src/style.css
+++ b/src/style.css
@@ -54,6 +54,7 @@ body {
 .line-clamp-3 {
   display: -webkit-box;
   -webkit-line-clamp: 3;
+  line-clamp: 3;
   -webkit-box-orient: vertical;
   display: -moz-box;
   -moz-box-orient: vertical;
