--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,8 @@
 body {
   font-family: "Inter", sans-serif;
-  transition: background-color 0.3s, color 0.3s;
+  transition:
+    background-color 0.3s,
+    color 0.3s;
 }
 
 /* Dark/Light Mode Transitions */
