--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: "Inter", sans-serif;
+  font-family: 'Inter', sans-serif;
   transition:
     background-color 0.3s,
     color 0.3s;
